--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -10,3 +10,6 @@
 // //font-sizes
 // $font-md: 1.125rem; //18px
 // $font-sm: 0.875rem; //14px
+$blue: #0f3460;
+$red: #e94560;
+$background-white: #f6f9fc;
