--- a/client/src/components/navbar/Navbar.css
+++ b/client/src/components/navbar/Navbar.css
@@ -78,6 +78,12 @@
   margin-bottom: 0.7rem;
 }
 
+.navbar--wrapper--header--category {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
 .navbar--wrapper--search {
   width: 100%;
 }
@@ -150,5 +156,29 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.navbar--wrapper--icons .navicon {
+  background: #f6f9fc;
+  padding: 0.5rem;
+  margin: 0.5rem;
+  height: 3rem;
+  width: 3rem;
+  text-align: center;
+  text-decoration: none;
+  border-radius: 50%;
+  position: relative;
+}
+
+.navbar--wrapper--icons .navicon--badge {
+  position: absolute;
+  width: 1rem;
+  font-size: x-small;
+  padding: 0.2rem;
+  border-radius: 50%;
+  background-color: #e94560;
+  color: #f6f9fc;
+  top: -15%;
+  right: 5%;
 }
 /*# sourceMappingURL=Navbar.css.map */
