--- a/client/src/components/navbar/Navbar.scss
+++ b/client/src/components/navbar/Navbar.scss
@@ -49,6 +49,9 @@ $background-white: #f6f9fc;
       &--logo {
         margin-bottom: 0.7rem;
       }
+      &--category {
+        display: flex;
+      }
     }
 
     &--search {
@@ -104,6 +107,54 @@ $background-white: #f6f9fc;
       display: flex;
       justify-content: space-around;
       align-items: center;
+      .navicon {
+        background: $background-white;
+        padding: 0.5rem;
+        margin: 0.5rem;
+        height: 3rem;
+        width: 3rem;
+        text-align: center;
+        text-decoration: none;
+        border-radius: 50%;
+        position: relative;
+      }
+      .navicon--badge {
+        position: absolute;
+        width: 1rem;
+        font-size: x-small;
+        padding: 0.2rem;
+        border-radius: 50%;
+        background-color: $red;
+        color: #f6f9fc;
+        top: -15%;
+        right: 5%;
+      }
     }
   }
 }
+// .bag-btn {
+//   background: $background-white;
+//   text-decoration: none;
+//   padding: 1rem;
+//   margin: 10px;
+//   position: relative;
+//   vertical-align: middle;
+//   text-align: center;
+//   display: inline-block;
+//   border-radius: 50%;
+//   transition: box-shadow 0.4s;
+//   &:hover {
+//     box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
+//   }
+// }
+
+// .bag-btn__badge {
+//   background: #ff5d5d;
+//   color: white;
+//   font-size: 12px;
+//   position: absolute;
+//   top: -10px;
+//   right: -10px;
+//   padding: 5px 8px;
+//   border-radius: 15px;
+// }
