--- a/client/src/components/navbar/Navbar.css
+++ b/client/src/components/navbar/Navbar.css
@@ -124,15 +124,34 @@
 }
 
 .navbar--wrapper--search--container--dropdown {
+  padding-left: 1rem;
+  margin: auto;
+  border-left: 1px solid black;
+  position: relative;
+}
+
+.navbar--wrapper--search--container--dropdown > div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding-left: 1rem;
+  cursor: pointer;
+}
+
+.navbar--wrapper--search--container--dropdown .dropdown-links {
+  position: absolute;
+  top: 3rem;
+  padding: 1rem;
+  background: #f6f9fc;
   margin: auto;
-  border-left: 1px solid black;
+  list-style: none;
+  text-decoration: none;
+}
+
+.navbar--wrapper--search--container--dropdown .dropdown-links li {
+  margin-top: 0.2rem;
 }
 
 .navbar--wrapper--search--container--dropdown h4 {
