--- a/client/src/components/navbar/Navbar.css
+++ b/client/src/components/navbar/Navbar.css
@@ -143,15 +143,16 @@
 .navbar--wrapper--search--container--dropdown .dropdown-links {
   position: absolute;
   top: 3rem;
-  padding: 1rem;
   background: #f6f9fc;
   margin: auto;
   list-style: none;
   text-decoration: none;
+  padding-left: 0;
 }
 
 .navbar--wrapper--search--container--dropdown .dropdown-links li {
-  margin-top: 0.2rem;
+  margin-top: 0.5rem;
+  padding: 0rem 1rem;
 }
 
 .navbar--wrapper--search--container--dropdown h4 {
