--- a/client/src/components/navbar/Navbar.scss
+++ b/client/src/components/navbar/Navbar.scss
@@ -91,7 +91,7 @@ $background-white: #f6f9fc;
           border-left: 1px solid black;
           position: relative;
 
-          > div {
+          & > div {
             display: flex;
             align-items: center;
             cursor: pointer;
@@ -99,13 +99,15 @@ $background-white: #f6f9fc;
           .dropdown-links {
             position: absolute;
             top: 3rem;
-            padding: 1rem;
             background: $background-white;
             margin: auto;
             list-style: none;
             text-decoration: none;
+            padding-left: 0;
+
             li {
-              margin-top: 0.2rem;
+              margin-top: 0.5rem;
+              padding: 0rem 1rem;
             }
           }
 
