--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -18,6 +18,12 @@ body {
   font-family: "Public Sans", sans-serif;
 }
 
+.container {
+  max-width: 1220px;
+  padding: 0 10px;
+  margin: 0 auto;
+}
+
 a,
 a:visited,
 a:hover {
