--- a/client/src/components/Card/_card.scss
+++ b/client/src/components/Card/_card.scss
@@ -1,3 +1,5 @@
+$red: #e94560;
+
 .card--wrapper {
     padding: 5rem 0;
     &--inner {
@@ -15,7 +17,7 @@
                 box-shadow: unset;
                 transition: all 150ms ease-in-out 0s;
                 padding: 5px 10px;
-                background-color: #e94560;
+                background-color: $red;
                 color: #fff;
                 position: absolute;
                 top: 0;
@@ -58,7 +60,7 @@
                     margin-top: 10px;
                     &--active {
                         padding-right: 0.5rem;
-                        color: rgb(233, 69, 96);
+                        color: $red;
                     }
                     &--inactive {
                         color: rgb(125, 135, 156);
@@ -75,14 +77,14 @@
                     height: 30px;
                     width: 30px;
                     font-size: 26px;
-                    color: rgb(233, 69, 96);
+                    color: $red;
                     border-radius: 8px;
                     box-shadow: 0 0 2px rgba(233, 69, 96, 0.418);
                     transition: 0.2s ease-in-out;
                     cursor: pointer;
                     &:hover {
                         color: #fff;
-                        background-color: rgb(233, 69, 96);
+                        background-color: $red;
                     }
                 }
             }
