--- a/client/src/styles/_globals.scss
+++ b/client/src/styles/_globals.scss
@@ -27,6 +27,12 @@ a:hover {
     text-decoration: none;
     color: inherit;
 }
+ul,
+li {
+    margin: 0;
+    padding: 0;
+}
+
 ul li {
     list-style: none;
 }
