--- a/client/src/components/navbar/Navbar.css
+++ b/client/src/components/navbar/Navbar.css
@@ -107,10 +107,11 @@
 
 .navbar--wrapper--search--container--icon {
   margin: auto;
+  padding-left: 1rem;
 }
 
 .navbar--wrapper--search--container--searchbox {
-  width: 70%;
+  width: 60%;
 }
 
 .navbar--wrapper--search--container--searchbox input {
@@ -124,7 +125,7 @@
 }
 
 .navbar--wrapper--search--container--dropdown {
-  padding-left: 1rem;
+  padding: 0 0.5rem;
   margin: auto;
   border-left: 1px solid black;
   position: relative;
@@ -148,10 +149,11 @@
   list-style: none;
   text-decoration: none;
   padding-left: 0;
+  border-radius: 0.5rem;
 }
 
 .navbar--wrapper--search--container--dropdown .dropdown-links li {
-  margin-top: 0.5rem;
+  margin: 0.5rem;
   padding: 0rem 1rem;
 }
 
