--- a/client/src/components/navbar/Navbar.scss
+++ b/client/src/components/navbar/Navbar.scss
@@ -72,9 +72,10 @@ $background-white: #f6f9fc;
 
         &--icon {
           margin: auto;
+          padding-left: 1rem;
         }
         &--searchbox {
-          width: 70%;
+          width: 60%;
           input {
             height: 3rem;
             width: 100%;
@@ -86,7 +87,7 @@ $background-white: #f6f9fc;
           }
         }
         &--dropdown {
-          padding-left: 1rem;
+          padding: 0 0.5rem;
           margin: auto;
           border-left: 1px solid black;
           position: relative;
@@ -104,9 +105,10 @@ $background-white: #f6f9fc;
             list-style: none;
             text-decoration: none;
             padding-left: 0;
+            border-radius: 0.5rem;
 
             li {
-              margin-top: 0.5rem;
+              margin: 0.5rem;
               padding: 0rem 1rem;
             }
           }
