--- a/client/src/styles/App.css
+++ b/client/src/styles/App.css
@@ -18,11 +18,23 @@ body {
   font-family: "Public Sans", sans-serif;
 }
 
+.container {
+  max-width: 1220px;
+  padding: 0 10px;
+  margin: 0 auto;
+}
+
 a,
 a:visited,
 a:hover {
   text-decoration: none;
   color: inherit;
+}
+
+ul,
+li {
+  margin: 0;
+  padding: 0;
 }
 
 ul li {
