--- a/client/src/styles/_globals.scss
+++ b/client/src/styles/_globals.scss
@@ -1,26 +1,38 @@
 html {
-  font-size: 100%;
-  box-sizing: border-box;
+    font-size: 100%;
+    box-sizing: border-box;
 }
 *,
 *::after,
 *::before {
-  box-sizing: inherit;
-  margin: 0px;
+    box-sizing: inherit;
+    margin: 0px;
 }
 
 body {
-  margin: 0;
-  padding: 0;
-  font-family: "Public Sans", sans-serif;
+    margin: 0;
+    padding: 0;
+    font-family: "Public Sans", sans-serif;
+}
+
+.container {
+    max-width: 1220px;
+    padding: 0 10px;
+    margin: 0 auto;
 }
 
 a,
 a:visited,
 a:hover {
-  text-decoration: none;
-  color: inherit;
+    text-decoration: none;
+    color: inherit;
 }
+ul,
+li {
+    margin: 0;
+    padding: 0;
+}
+
 ul li {
-  list-style: none;
+    list-style: none;
 }
