footer soft-touched

--- a/client/src/components/navbar/_navbar.scss
+++ b/client/src/components/navbar/_navbar.scss
@@ -46,7 +46,7 @@ $background-white-hover: #e2ecf5;
             align-items: center;
             justify-content: space-between;
             &--logo {
-                margin-bottom: 0.7rem;
+                margin-right: 0.7rem;
             }
             &--category {
                 display: flex;
