--- a/client/src/components/navbar/_navbar.scss
+++ b/client/src/components/navbar/_navbar.scss
@@ -36,6 +36,10 @@ $background-white-hover: #e2ecf5;
 .navbar {
     background-color: #fff;
     height: 5rem;
+    position: sticky;
+    top: 0;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
+    z-index: 999;
     &--wrapper {
         display: flex;
         align-items: center;
