product details page added

--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -12,4 +12,6 @@
 // $font-sm: 0.875rem; //14px
 $blue: #0f3460;
 $red: #e94560;
+$black: rgb(43, 52, 69);
 $background-white: #f6f9fc;
+$light-gray: rgb(139, 138, 138);
