--- a/client/src/styles/_mixins.scss
+++ b/client/src/styles/_mixins.scss
@@ -28,3 +28,8 @@ $breakpoints-down: (
     @content;
   }
 }
+
+// Convert px to rem
+@mixin toRem($property, $value) {
+  #{$property}: ($value / 16) + rem;
+}
