--- a/client/src/components/navbar/_navbar.scss
+++ b/client/src/components/navbar/_navbar.scss
@@ -164,14 +164,14 @@ $background-white-hover: #e2ecf5;
             }
             .navicon--badge {
                 position: absolute;
-                width: 1rem;
+                width: 1.2rem;
                 font-size: x-small;
                 padding: 0.2rem;
                 border-radius: 50%;
                 background-color: $red;
                 color: #f6f9fc;
-                top: -15%;
-                right: 5%;
+                top: -7px;
+                right: -5px;
             }
         }
     }
