--- a/client/src/components/Card/_card.scss
+++ b/client/src/components/Card/_card.scss
@@ -74,8 +74,9 @@ $red: #e94560;
                 flex-direction: column;
                 align-items: center;
                 .cart--icon--wrapper {
-                    display: grid;
-                    place-items: center;
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
                     height: 30px;
                     width: 30px;
                     font-size: 26px;
