--- a/client/src/components/MinorComponents/_supportCard.scss
+++ b/client/src/components/MinorComponents/_supportCard.scss
@@ -27,7 +27,8 @@
 
     i > * {
       width: 1.75rem;
-      height: 1.75;
+      height: 1.75rem;
+      color: black;
     }
   }
   &--headline {
