--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -3,3 +3,6 @@
 @import "./globals";
 @import "../components/Product/product";
 @import "../components/SideCart/sideBarCart";
+@import "../components/Modal/LoginModal/loginModal";
+@import "../components/Modal/RegistrationModal/registration";
+@import "../components/Modal/ProductDetailsModal/productDetailsModal";
