--- a/client/src/components/navbar/_navbar.scss
+++ b/client/src/components/navbar/_navbar.scss
@@ -158,6 +158,7 @@ $background-white-hover: #e2ecf5;
                 text-decoration: none;
                 border-radius: 50%;
                 position: relative;
+                cursor: pointer;
                 &:hover {
                     background: $background-white-hover;
                 }
