--- a/client/src/styles/_mixins.scss
+++ b/client/src/styles/_mixins.scss
@@ -44,3 +44,13 @@ $breakpoints-down: (
     background: rgb(255, 255, 255);
     box-shadow: 0 0 25px rgba(0, 0, 0, 0.1);
 }
+
+@mixin basicBtn($bgColor) {
+    background-color: $bgColor;
+    border-radius: 8px;
+    padding: 12px 0;
+    color: #fff;
+    border: 1px solid $bgColor;
+    cursor: pointer;
+    transition: 0.2s ease-in-out;
+}
