--- a/client/src/components/SideCart/_sideBarCart.scss
+++ b/client/src/components/SideCart/_sideBarCart.scss
@@ -46,6 +46,7 @@
                         border-radius: 50%;
                         box-shadow: 0 0 2px rgba(233, 69, 96, 0.816);
                         transition: 0.2s ease-in-out;
+                        user-select: none;
                         cursor: pointer;
                         &:hover {
                             color: #fff;
@@ -56,6 +57,7 @@
                         padding: 5px 0;
                         font-size: 14px;
                         margin: 0px 10px;
+                        user-select: none;
                     }
                 }
                 .cart--item--inside {
