--- a/client/src/styles/_globals.scss
+++ b/client/src/styles/_globals.scss
@@ -1,55 +1,56 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&display=swap");
 html {
-  font-size: 100%;
-  box-sizing: border-box;
+    font-size: 100%;
+    box-sizing: border-box;
 }
 *,
 *::after,
 *::before {
-  box-sizing: inherit;
-  margin: 0px;
-  padding: 0px;
+    box-sizing: inherit;
+    margin: 0px;
+    padding: 0px;
+    user-select: none;
 }
 
 body {
-  margin: 0;
-  padding: 0;
-  font-family: "Open Sans", sans-serif;
-  background-color: $background-white;
+    margin: 0;
+    padding: 0;
+    font-family: "Open Sans", sans-serif;
+    background-color: $background-white;
 }
 
 a,
 a:visited,
 a:hover {
-  text-decoration: none;
-  color: inherit;
+    text-decoration: none;
+    color: inherit;
 }
 ul,
 li {
-  margin: 0;
-  padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 ul li {
-  list-style: none;
+    list-style: none;
 }
 
 // common class use
 
 .container {
-  max-width: 1220px;
-  padding: 0 10px;
-  margin: 0 auto;
+    max-width: 1220px;
+    padding: 0 10px;
+    margin: 0 auto;
 }
 
 .btn-primary {
-  background-color: $red;
-  color: white;
-  border: none;
-  outline: none;
-  padding: 12px 25px;
-  font-weight: 700;
-  border-radius: 7px;
-  cursor: pointer;
-  font-size: 14px;
+    background-color: $red;
+    color: white;
+    border: none;
+    outline: none;
+    padding: 12px 25px;
+    font-weight: 700;
+    border-radius: 7px;
+    cursor: pointer;
+    font-size: 14px;
 }
