--- a/client/src/components/Admin/Navigation/_navigation.scss
+++ b/client/src/components/Admin/Navigation/_navigation.scss
@@ -23,7 +23,7 @@
       // expand function here
       max-height: 50px;
       overflow-y: hidden;
-      margin-bottom: 20px;
+      margin-bottom: 10px;
       .hideIcon {
         .MuiSvgIcon-root {
           &:nth-of-type(2),
@@ -35,6 +35,7 @@
       &.active {
         background-color: $admin-light-bg;
         border-radius: 10px;
+        border: 1px solid $red;
       }
       .MuiSvgIcon-root {
         &:nth-of-type(2) {
@@ -63,21 +64,25 @@
       > span {
         display: flex;
         align-items: center;
-        justify-content: space-around;
+        justify-content: flex-start;
+        gap: 10px;
         font-size: 16px;
         color: $admin-text;
         font-weight: 500;
+        > p {
+          flex: 1;
+        }
       }
     }
     &__sub {
       padding: 10px 0px;
       display: flex;
       flex-direction: column;
-      align-items: center;
+      margin-left: 25px;
+      color: $admin-text;
       > li {
         font-size: 14px;
         padding: 2px 10px;
-
         &:hover {
           color: $red;
         }
@@ -109,18 +114,28 @@
     }
     &__modal {
       position: relative;
+      &.shape::after {
+        content: "";
+        position: absolute;
+        width: 30px;
+        height: 30px;
+        background-color: $admin-card-bg;
+        left: 80%;
+        bottom: -30px;
+        transform: rotate(50deg) translate(-50%, 30px);
+        z-index: 1;
+      }
       > div {
         &:nth-of-type(1) {
           cursor: pointer;
         }
         &:nth-of-type(2) {
           position: absolute;
-          background-color: red;
           box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
           background-color: $admin-card-bg;
           padding: 20px 0px;
           left: 90%;
-          top: 70px;
+          top: 74px;
           transform: translateX(-90%);
           min-width: 200px;
           > p {
@@ -130,6 +145,7 @@
             gap: 10px;
             padding: 5px 10px;
             cursor: pointer;
+            z-index: 2;
             &:hover {
               background-color: $admin-light-bg;
             }
