--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -6,3 +6,4 @@
 @import "../components/Modal/LoginModal/loginModal";
 @import "../components/Modal/RegistrationModal/registration";
 @import "../components/Modal/ProductDetailsModal/productDetailsModal";
+@import "../components/AlertBox/alertBox";
