--- a/client/src/components/Modal/RegistrationModal/_registration.scss
+++ b/client/src/components/Modal/RegistrationModal/_registration.scss
@@ -24,6 +24,7 @@
         }
         .Registration--form {
             .form-group {
+                position: relative;
                 margin: 1rem 0;
                 & > label {
                     color: rgba(0, 0, 0, 0.6);
@@ -44,6 +45,13 @@
                         outline: none;
                         border: 1px solid $red;
                     }
+                }
+                .err-message {
+                    color: #ff0000;
+                    // position: absolute;
+                    font-size: 12px;
+                    // top: 0;
+                    // right: 0;
                 }
             }
             .submit {
