--- a/client/src/styles/_variables.scss
+++ b/client/src/styles/_variables.scss
@@ -15,3 +15,5 @@ $red: #e94560;
 $black: rgb(43, 52, 69);
 $background-white: #f6f9fc;
 $light-gray: rgb(139, 138, 138);
+$success: #00a61a;
+$error: #ff0000;
