--- a/client/src/components/Modal/RegistrationModal/_registration.scss
+++ b/client/src/components/Modal/RegistrationModal/_registration.scss
@@ -32,8 +32,12 @@
                     font-weight: 600;
                 }
                 .form-input {
-                    width: 100%;
+                    display: flex;
+                    justify-content: space-between;
+                    align-items: center;
+                    gap: 10px;
                     height: 40px;
+                    width: 100%;
                     padding: 5px 10px;
                     margin-top: 8px;
                     border-radius: 8px;
@@ -44,6 +48,25 @@
                     &:focus {
                         outline: none;
                         border: 1px solid $red;
+                    }
+                    & > input {
+                        flex: 1;
+                        border: none;
+                        &:focus {
+                            outline: none;
+                        }
+                    }
+                    .show-password-icon {
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        height: 25px;
+                        width: 25px;
+                        border-radius: 50%;
+                        cursor: pointer;
+                        &:hover {
+                            background: rgb(241, 241, 241);
+                        }
                     }
                 }
                 .err-message {
