--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -7,3 +7,7 @@
 @import "../components/Modal/RegistrationModal/registration";
 @import "../components/Modal/ProductDetailsModal/productDetailsModal";
 @import "../components/AlertBox/alertBox";
+
+.App {
+    position: relative;
+}
