--- a/client/src/components/Modal/RegistrationModal/_registration.scss
+++ b/client/src/components/Modal/RegistrationModal/_registration.scss
@@ -44,6 +44,7 @@
                     border: 1px solid rgb(211, 211, 211);
                     &:hover {
                         border: 1px solid rgb(175, 175, 175);
+                        box-shadow: 0 10px 10px rgba(0, 0, 0, 0.05);
                     }
                     &:focus {
                         outline: none;
@@ -84,6 +85,7 @@
                 &:hover {
                     background-color: #fff;
                     color: $red;
+                    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.05);
                 }
             }
         }
