--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -7,6 +7,7 @@
 @import "../components/Modal/RegistrationModal/registration";
 @import "../components/Modal/ProductDetailsModal/productDetailsModal";
 @import "../components/AlertBox/alertBox";
+@import "../pages/profile";
 
 .App {
     position: relative;
