loading spinner added

--- a/client/src/styles/App.scss
+++ b/client/src/styles/App.scss
@@ -8,6 +8,7 @@
 @import "../components/Modal/ProductDetailsModal/productDetailsModal";
 @import "../components/AlertBox/alertBox";
 @import "../pages/profile";
+@import "../components/LoadingSpiner/loadingSpinner";
 
 .App {
     position: relative;
